@@ -2,6 +2,7 @@ libvmod-cfg (5.3-1) stable; urgency=low
 
   * Added new parameter 'prefix' to .dump() methods
   * Linked against LuaJIT when possible
+  * Added new parameter 'gc_collect' to .execute() method
 
  -- Carlos Abalde <carlos.abalde@gmail.com>  Sat, 13 Oct 2018 16:00:00 +0200
 
